# Marker-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
Marker_Reults_images/Marker/: Prompt.txt
Marker_Reults_images/Morning_node/: Prompt.txt
Marker_Reults_images/Statute_Flow/: Prompt.txt
backend/: pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/api/: routes.py
backend/src/llm/: __init__.py  deepseek.py
backend/src/models/: __init__.py  domain.py
backend/src/pipeline/: __init__.py  graph.py  state.py
backend/src/pipeline/nodes/: __init__.py  critique.py  deconstruct.py  raw_material.py  synthesize.py  technique_search.py
backend/src/rendering/: __init__.py  image_gen.py
backend/src/storage/: __init__.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
references/: techniques.md
